--- a/TheOtherRoles/TheOtherRoles.csproj
+++ b/TheOtherRoles/TheOtherRoles.csproj
@@ -14,6 +14,15 @@
         <EmbeddedResource Include="Resources\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Resources\TabIconClassicMode.png" />
+      <None Remove="Resources\TabIconGuesserMode.png" />
+      <None Remove="Resources\TabIconGuesserSettings.png" />
+      <None Remove="Resources\TabIconHideNSeekMode.png" />
+      <None Remove="Resources\TabIconHideNSeekRoles.png" />
+      <None Remove="Resources\TabIconHideNSeekSettings.png" />
+    </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.9.20" />
         <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.660" />
