--- a/TheOtherRoles/TheOtherRoles.csproj
+++ b/TheOtherRoles/TheOtherRoles.csproj
@@ -27,9 +27,7 @@
 		<PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.9.20" />
         <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.660" />
         <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" />
-	    <Reference Include="Reactor">
-	      <HintPath>Resources\ThirdParty\Reactor\Reactor.dll</HintPath>
-	    </Reference>
+        <PackageReference Include="Reactor" Version="2.0.0-ci.185" />
     </ItemGroup>	
 
     <Target Name="Date" BeforeTargets="BeforeBuild">  <!--Will make the compile time available s.t. we can let betas expire-->
